--- a/package.json
+++ b/package.json
@@ -4,39 +4,32 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --env mode=production",
-    "start": "webpack serve --env mode=development"
+    "start": "vite",
+    "build:dev": "vite build",
+    "build:prod": "vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ant-design/icons": "^6.0.0",
     "antd": "^5.24.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
-    "@types/node": "^22.13.13",
-    "@types/react": "^19.0.12",
+    "@eslint/js": "^9.21.0",
+    "@types/node": "^22.13.14",
+    "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@types/webpack": "^5.28.5",
-    "@types/webpack-dev-server": "^4.7.1",
-    "css-loader": "^7.1.2",
-    "fork-ts-checker-webpack-plugin": "^9.0.2",
-    "html-webpack-plugin": "^5.6.3",
-    "mini-css-extract-plugin": "^2.9.2",
-    "react-refresh": "^0.16.0",
-    "react-refresh-typescript": "^2.0.10",
-    "sass": "^1.86.0",
-    "sass-loader": "^16.0.5",
-    "style-loader": "^4.0.0",
-    "ts-loader": "^9.5.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.2",
-    "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
+    "sass-embedded": "^1.86.0",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.24.1",
+    "vite": "^6.2.0"
   }
 }
